# python3-trepan

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  NEWS  NEWS.md  ProjectHome.md  README.rst  README.txt  __init__.py  __pkginfo__.py  appveyor.yml  circle.yml  make-check-filter.py  pyproject.toml  requirements-dev.txt  requirements.txt  rst2html.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.circleci-notyet/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: macos.yml  osx.yml  ubuntu-prompt-toolkit.yml  ubuntu.yml  windows.yml
admin-tools/: check-3.0-3.2-versions.sh  check-3.11-versions.sh  check-3.2-3.5-versions.sh  check-3.3-3.5-versions.sh  check-3.6-3.10-versions.sh  check-newer-versions.sh  check-newest-versions.sh  check-older-versions.sh  check-versions.sh  checkout_common.sh  how-to-make-a-release.md  install-all-3.11.sh  install-all-3.6-3.10.sh  install-all-newest.sh  make-dist-3.0-3.1.sh  make-dist-3.0-3.2.sh  make-dist-3.11.sh  make-dist-3.2-3.5.sh  make-dist-3.3-3.5.sh  make-dist-3.6-3.10.sh  make-dist-newer.sh  make-dist-newest.sh  make-dist-older.sh  make-dist.sh  make-docs.sh  merge-for-3.0.sh  merge-for-3.11.sh  merge-for-3.2.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-3.0-3.1-versions  pyenv-3.0-3.2-versions  pyenv-3.11-versions  pyenv-3.2-3.5-versions  pyenv-3.3-3.5-versions  pyenv-3.6-3.10-versions  pyenv-newer-versions  pyenv-newest-versions  pyenv-versions  setup-master.sh  (+5 more)
celery/: README.md  ctrepan.py  trepan.py
docs/: Makefile  conf.py  entry-exit.rst  features.rst  index.rst  install.rst  make.bat  manpages.rst  options.rst  syntax.rst
docs/commands/: Makefile  breakpoints.rst  data.rst  info.rst  running.rst  set.rst  show.rst
docs/manpages/: trepan3k.rst  trepan3kc.rst
docs/syntax/: arange.rst  command.rst  examples.rst  location.rst  range.rst
test/: make-check-filter.py
test/data/: Makefile  highlight-310.right  highlight-38.right  highlight.cmd  highlight.right  macro-pypy.right  macro.cmd  macro.right  noscript.cmd  noscript.right  step-310.right  step-311.right  step-33.right  step-36.right  step-37pypy.right  step-38.right  step-pypy.right  step.cmd  step.right
test/example/: .gitignore  bug.py  eval.py  fib-exec.py  fib.py  gcd-breakpoint.py  gcd-dbgcall-explicit-profile.py  gcd-dbgcall-noprofile.py  gcd-dbgcall.py  gcd.py  hanoi.py  jump.py  multi-line.py  tail.py
test/functional/: Makefile  __init__.py  fn_helper.py  setup.cfg  setup.py  stringarray.py  test-break.py  test-finish.py  test-jump.py  test-next.py  test-sig.py  test-skip.py  test-step.py  test_break.py  test_finish.py  test_jump.py  test_next.py  test_sig.py  test_skip.py  test_step.py
test/integration/: .gitignore  Makefile  helper.py  setup.cfg  setup.py  test-general.py  test-highlight.py  test-macro.py  test-noscript.py  test_general.py  test_highlight.py  test_noscript.py  test_step.py
test/unit/: Makefile  cmdhelper.py  test-break.py  test-brkpt.py  test-bytecode.py  test-clifns.py  test-cmd-alias.py  test-cmdbreak.py  test-cmdfns.py  test-cmdproc.py  test-completion.py  test-core.py  test-disassemble.py  test-except.py  test-fifo.py  test-finish.py  test-help.py  test-info-file.py  test-info-files.py  test-inout-input.py  test-io-input.py  test-io-input.py.try  test-kill.py  test-lib-complete.py  test-lib-display.py  test-lib-eval.py  test-lib-file.py  test-lib-format.py  test-lib-pp.py  test-lib-print.py  test-lib-printing.py  test-lib-sig.py  test-lib-thread.py  test-list.py  test-misc.py  test-pdef.py  test-pr.py  test-print.py  test-processor.py  test-quit.py  (+34 more)
trepan/: VERSION.py  __init__.py  __main__.py  api.py  bwcli.py  cli.py  client.py  clifns.py  debugger.py  exception.py  interface.py  misc.py  new_api.py  options.py  post_mortem.py  symon_debugger.py  sysmon_api.py  sysmon_debugger.py  version.py  vprocessor.py
trepan/bwprocessor/: __init__.py  location.py  main.py  msg.py
trepan/inout/: __init__.py  base.py  fifoclient.py  fifoserver.py  input.py  output.py  prompt_bindkeys.py  ptk_bindkeys.py  scriptin.py  stringarray.py  tcpclient.py  tcpfns.py  tcpserver.py
trepan/interfaces/: __init__.py  bullwinkle.py  client.py  comcodes.py  script.py  server.py  user.py
trepan/io/: __init__.py  base.py  dbg_output.py  fifoclient.py  fifoserver.py  input.py  output.py  scriptin.py  (+4 more)
(+271 files in other folders)
