[build-system]
requires = [
    "setuptools>=61.2",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "trepan3k"
description = "Python cross-version byte-code library and disassembler"
dependencies = [
    "columnize >= 0.3.10",
    "pyficache >= 2.3.0",
    "xdis >= 6.0.3,<6.2.0",
    "pygments >= 2.2.0",
    "spark_parser >= 1.8.9, <1.9.0",
    "tracer >= 0.3.2",
    "term-background >= 1.0.1",
]
readme = "README.rst"
license = {text = "GPL"}
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/trepan3k/"
Downloads = "https://github.com/rocky/python-trepan3k/releases"

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
]

[project.scripts]
trepan3k   = "trepan.__main__:main"
trepan3kc  = "trepan.client:main"

[tool.setuptools.dynamic]
version = {attr = "trepan.version.__version__"}
