[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "trepan3k"
description = "GDB-like Python Debugger in the Trepan family"
dependencies = [
    "columnize >= 0.3.10",
    "pyficache >= 2.3.0",
    "xdis >= 6.1.1,<6.2.0",
    "pygments >= 2.2.0",
    "spark_parser >= 1.8.9, <1.9.2",
    "tracer > 1.9.0",
    "term-background >= 1.0.1",
]
readme = "README.rst"
license = {text = "GPL"}
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
]
full = [
    "prompt-toolkit",    # Alternate interface, akin to GNU Readline
]

[project.scripts]
trepan3k   = "trepan.__main__:main"
trepan3kc  = "trepan.client:main"

[project.urls]
Homepage = "https://pypi.org/project/trepan3k/"
Downloads = "https://github.com/rocky/python-trepan3k/releases"

[tool.setuptools.dynamic]
version = {attr = "trepan.version.__version__"}

[tool.pyright]
include = ["trepan"]
# exclude = []
ignore = ["dist", "docs", "tmp", ".cache"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"
